Blur: Fix page being cut off
Closes #93

--- a/themes/blur.css
+++ b/themes/blur.css
@@ -21,6 +21,8 @@
 
 main > [class*="container--"],
 main > [data-type="page"],
+main > [class*="feed--"],
+main > [class*="wrapper--"],
 .__NEPTUNE_PAGE {
 	margin-bottom: 128px;
 }
